<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Samparka</string>
    <string name="title">Samparka</string>
    <string name="subtitle">Connect</string>
    <string name="tagline"></string>
    <string name="select_language">Select Your Language</string>
    <string name="english">English</string>
    <string name="kannada">ಕನ್ನಡ (Kannada)</string>
    <string name="logo_desc">App logo</string>
    <string name="kannada_prompt">ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆರಿಸಿ</string>
    <string name="default_web_client_id">664826837179-f4jcmd6st5dfe13nkqsmvutev2tnqt4l.apps.googleusercontent.com</string>

    <string name="leaf_logo_desc">App logo</string>
    <string name="welcome">Welcome</string>
    <string name="login_subtitle">Login using email and password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="email_icon_desc">Email icon</string>
    <string name="password_icon_desc">Password icon</string>

    <string name="greeting">Hi User</string>
    <string name="report_new_issue">+ Report New Issue</string>
    <string name="total_reports">0\nTotal Reports</string>
    <string name="in_progress_reports">0\nIn Progress</string>
    <string name="resolved_reports">0\nResolved</string>
    <string name="my_reports">My Reports</string>
    <string name="help_chat">Help Chat</string>
    <string name="community_update_text">Community Update\nNew Panchayat meeting announcement soon</string>
    <string name="notification_icon_description">Notification icon</string>
    <string name="profile_icon_description">Profile icon</string>

    <string name="login_with_email">Login with Email</string>
    <string name="login_with_phone">Login with Phone</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="send_otp_button">Send OTP</string>
    <string name="verify_otp_button">Verify &amp; Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="google_sign_in">Sign in with Google</string>

    <string-array name="languages">
        <item>English</item>
        <item>Kannada</item>
        <item>Hindi</item>
        <item>Telugu</item>
    </string-array>




<string name="tab_login">Login</string>
<string name="tab_register">Register</string>

<string name="register_title">Create your account</string>
<string name="register_subtitle">Enter your details to register</string>

<string name="hint_full_name">Full Name</string>
<string name="hint_email">Email</string>
<string name="hint_password">Create Password</string>

<string name="btn_create_account">Create Account</string>

<string name="login_title">Login</string>
<string name="login_subtittle">Enter Authority ID and Password</string>

<string name="hint_authority_id">Authority ID</string>
<string name="hint_login_password">Password</string>

<string name="btn_login">Login</string>

<string name="cd_user_icon">User icon</string>
<string name="cd_email_icon">Email icon</string>
<string name="cd_password_icon">Password icon</string>
<string name="cd_logo">Logo</string>
</resources>


